fix alignment of back to top buttons

--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ nav a {
   font-size: 2rem;
   border-radius: 3px;
   padding: 5px;
-  margin: 0rem 2rem;
+  margin: -0.5rem 2rem;
   height: 2.5rem;
   display: inline-flex;
   justify-content: center;
